--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,17 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <View
-        android:id="@+id/padding_view"
-        android:layout_width="match_parent"
-        android:layout_height="24dp"
-        android:background="@color/white" />
-
     <LinearLayout
         android:id="@+id/logoView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/padding_view"
         android:background="@color/white"
         android:elevation="20dp"
         android:orientation="vertical">
@@ -49,7 +42,6 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal"
-
             android:paddingHorizontal="40dp"
             android:paddingVertical="20dp">
 
@@ -84,6 +76,7 @@
                 android:background="@color/divide_gray" />
 
             <TextView
+                android:id="@+id/main_tv_manager"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -107,8 +100,8 @@
         app:defaultNavHost="true"
         app:navGraph="@navigation/mobile_navigation" />
 
-
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        app:labelVisibilityMode="labeled"
         android:id="@+id/nav_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
