--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,8 +12,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingHorizontal="20dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingHorizontal="20dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -22,13 +22,13 @@
                 android:paddingVertical="20dp">
 
                 <LinearLayout
-                    android:clickable="true"
                     android:id="@+id/home_btn_play"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:background="@drawable/reserve_back_active"
+                    android:clickable="true"
                     android:gravity="center"
                     android:orientation="vertical"
                     android:padding="15dp">
@@ -48,13 +48,13 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:clickable="true"
                     android:id="@+id/home_btn_walk"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
                     android:background="@drawable/reserve_back"
+                    android:clickable="true"
                     android:gravity="center"
                     android:orientation="vertical"
                     android:padding="15dp">
@@ -81,20 +81,36 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:text="@string/consumer_review" />
+
             <androidx.recyclerview.widget.RecyclerView
+                android:overScrollMode="never"
+                android:id="@+id/home_rv_review"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/home_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/home_rv"
+                android:layout_marginTop="20dp"
                 android:overScrollMode="never" />
 
             <TextView
+                android:id="@+id/home_tv_schedule_more"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/home_tv_schedule_more"
+                android:layout_gravity="center_horizontal"
                 android:text="@string/more"
-                android:textStyle="bold"
                 android:textColor="@color/colorPrimary"
-                android:layout_gravity="center_horizontal" />
+                android:textStyle="bold" />
 
         </LinearLayout>
 
