--- a/app/src/main/res/layout/fragment_select_time.xml
+++ b/app/src/main/res/layout/fragment_select_time.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingTop="20dp"
     tools:context=".Fragments.SelectTime.SelectTimeFragment">
 
     <LinearLayout
@@ -78,7 +77,7 @@
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="서비스 시분 선택"
+        android:text="서비스 시간 선택"
         android:textSize="18sp"
         android:textColor="@color/black"
         android:textStyle="bold"/>
@@ -95,6 +94,29 @@
         android:gravity="center"
         android:padding="10dp"
         android:id="@+id/select_time_sp_time"/>
+
+    <TextView
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="결제금액"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:id="@+id/select_time_price"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/input_round"
+        android:padding="10dp"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:text="결제금액" />
 
     <com.vipet.petvip.Design.NextBtn
         android:layout_marginTop="30dp"
