--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,6 +12,12 @@
         android:title="@string/reserve_log" />
 
     <item
+        android:enabled="true"
+        android:id="@+id/navigation_public_info"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="정보" />
+
+    <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/profile" />
