--- a/app/src/main/res/layout/dialog_pet.xml
+++ b/app/src/main/res/layout/dialog_pet.xml
@@ -40,11 +40,11 @@
             android:id="@+id/dialog_pet_birth"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/input_round"
+            android:background="@drawable/pet_background"
             android:elevation="2dp"
             android:padding="10dp"
             android:text="이름"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="16sp" />
 
         <TextView
@@ -52,11 +52,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:background="@drawable/input_round"
+            android:background="@drawable/pet_background"
             android:elevation="2dp"
             android:padding="10dp"
             android:text="이름"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="16sp" />
 
         <TextView
@@ -64,11 +64,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:background="@drawable/input_round"
+            android:background="@drawable/pet_background"
             android:elevation="2dp"
             android:padding="10dp"
             android:text="이름"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="16sp" />
 
         <TextView
@@ -76,11 +76,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:background="@drawable/input_round"
+            android:background="@drawable/pet_background"
             android:elevation="2dp"
             android:padding="10dp"
             android:text="이름"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="16sp" />
 
     </LinearLayout>
