--- a/app/src/main/res/layout/fragment_manager_review.xml
+++ b/app/src/main/res/layout/fragment_manager_review.xml
@@ -99,6 +99,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/manager_review_rv" />
