--- a/app/src/main/res/drawable/pet_background.xml
+++ b/app/src/main/res/drawable/pet_background.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <gradient
-        android:angle="315"
+        android:angle="225"
         android:type="linear"
-        android:startColor="#126BE6"
+        android:startColor="#40BA8E"
         android:endColor="#1AA49B"/>
     <corners
         android:radius="10dp"/>
