--- a/app/src/main/res/drawable/review_backround.xml
+++ b/app/src/main/res/drawable/review_backround.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <gradient
-        android:angle="315"
-        android:type="linear"
-        android:startColor="#126BE6"
-        android:endColor="#1AA49B"/>
+    <solid android:color="@color/custom_red" />
     <corners
         android:radius="10dp"/>
 </shape>
