--- a/app/src/main/res/layout/dialog_location.xml
+++ b/app/src/main/res/layout/dialog_location.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="주소"
-            android:textColor="@color/black"
+            android:textColor="@color/green"
             android:textSize="16sp" />
 
         <RelativeLayout
