--- a/app/src/main/res/layout/dialog_review.xml
+++ b/app/src/main/res/layout/dialog_review.xml
@@ -42,7 +42,7 @@
         android:layout_marginHorizontal="15dp"
         android:layout_marginBottom="15dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:background="@drawable/primary_btn"
         android:text="@string/complete"
         android:textColor="@color/white"
