--- a/app/src/main/res/layout/fragment_manager_schedule.xml
+++ b/app/src/main/res/layout/fragment_manager_schedule.xml
@@ -7,6 +7,7 @@
     tools:context=".Fragments.ManagerScheduleFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginHorizontal="10dp"
         android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
