--- a/app/src/main/res/layout/item_food.xml
+++ b/app/src/main/res/layout/item_food.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_marginTop="10dp"
-    android:background="@drawable/input_round"
+    android:background="@drawable/pet_background"
     android:padding="15dp"
     android:elevation="4dp"
     android:layout_width="match_parent"
@@ -13,11 +13,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이름"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/lime"
         android:textSize="16sp"
         android:textStyle="bold" />
 
     <com.github.mikephil.charting.charts.BarChart
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:id="@+id/item_food_chart" />
