--- a/app/src/main/res/layout/item_manager.xml
+++ b/app/src/main/res/layout/item_manager.xml
@@ -5,7 +5,7 @@
     android:layout_marginTop="20dp"
     android:elevation="2dp"
     android:id="@+id/item_manager_root"
-    android:background="@drawable/select_btn">
+    android:background="@drawable/pet_background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="이름"
-                android:textColor="@color/black"
+                android:textColor="@color/lime"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=" 전문가"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="18sp" />
 
         </LinearLayout>
