--- a/app/src/main/res/layout/item_manager_schedule.xml
+++ b/app/src/main/res/layout/item_manager_schedule.xml
@@ -39,7 +39,7 @@
 
         <View
             android:layout_width="4dp"
-            android:layout_height="120dp"
+            android:layout_height="180dp"
             android:layout_marginStart="-1.5dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/vertical_dash_line"
@@ -52,7 +52,7 @@
         android:layout_marginBottom="10dp"
         android:layout_weight="1.5"
         android:background="@drawable/schedule_background"
-        android:elevation="2dp"
+        android:elevation="4dp"
         android:orientation="vertical"
         android:padding="20dp">
 
@@ -66,7 +66,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/schedule_log"
-                android:textColor="@color/colorPrimary"
+                android:textStyle="bold"
+                android:textColor="@color/lime"
                 android:textSize="18sp" />
 
             <TextView
@@ -74,7 +75,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:text="@string/schedule_log"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="18sp" />
         </LinearLayout>
 
@@ -82,7 +83,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
             <TextView
@@ -90,7 +91,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
                 android:text="@string/member_name"
-                android:textColor="@color/black"
+                android:textColor="@color/light_gray"
                 android:textSize="16sp" />
 
             <TextView
@@ -98,7 +99,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/schedule_log"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="16sp" />
         </LinearLayout>
 
@@ -106,7 +107,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="7dp"
             android:orientation="horizontal">
 
             <TextView
@@ -114,7 +115,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
                 android:text="@string/visit_date"
-                android:textColor="@color/black"
+                android:textColor="@color/light_gray"
                 android:textSize="16sp" />
 
             <TextView
@@ -122,7 +123,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/schedule_log"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="16sp" />
         </LinearLayout>
 
@@ -130,7 +131,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="7dp"
             android:orientation="horizontal">
 
             <TextView
@@ -138,7 +139,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
                 android:text="@string/start_time"
-                android:textColor="@color/black"
+                android:textColor="@color/light_gray"
                 android:textSize="16sp" />
 
             <TextView
@@ -146,14 +147,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/schedule_log"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="16sp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="7dp"
             android:orientation="horizontal">
 
             <TextView
@@ -161,7 +162,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
                 android:text="@string/end_time"
-                android:textColor="@color/black"
+                android:textColor="@color/light_gray"
                 android:textSize="16sp" />
 
             <TextView
@@ -169,14 +170,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/schedule_log"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="16sp" />
         </LinearLayout>
         <!--전문가-->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="7dp"
             android:orientation="horizontal">
 
             <TextView
@@ -184,7 +185,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
                 android:text="@string/pet"
-                android:textColor="@color/black"
+                android:textColor="@color/light_gray"
                 android:textSize="16sp" />
 
             <TextView
@@ -192,7 +193,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/schedule_log"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="16sp" />
         </LinearLayout>
 
@@ -207,43 +208,54 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
                 android:text="연락처"
-                android:textColor="@color/black"
+                android:textColor="@color/light_gray"
                 android:textSize="16sp" />
 
             <TextView
+                android:textStyle="bold"
                 android:id="@+id/item_schedule_tv_phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/schedule_log"
-                android:textColor="@color/black"
+                android:textColor="@color/custom_red"
                 android:textSize="16sp" />
         </LinearLayout>
         <!--리뷰-->
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
             android:layout_marginTop="15dp">
 
             <TextView
+                android:gravity="center"
+                android:layout_weight="1"
+                android:background="@drawable/transparent_btn"
+                android:padding="5dp"
                 android:id="@+id/item_schedule_tv_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="위치 정보 확인"
-                android:textColor="@color/colorPrimary"
-                android:textSize="16sp"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:layout_marginEnd="5dp"
                 android:textStyle="bold" />
 
             <TextView
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_marginStart="5dp"
+                android:background="@drawable/transparent_btn"
+                android:padding="5dp"
                 android:id="@+id/item_schedule_tv_pet_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
                 android:text="@string/pet_info"
-                android:textColor="@color/colorPrimary"
-                android:textSize="16sp"
+                android:textColor="@color/white"
+                android:textSize="14sp"
                 android:textStyle="bold" />
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
 </LinearLayout>
