--- a/app/src/main/res/layout/item_pet.xml
+++ b/app/src/main/res/layout/item_pet.xml
@@ -6,7 +6,7 @@
     android:id="@+id/item_pet_view"
     android:layout_marginTop="15dp"
     android:elevation="2dp"
-    android:background="@drawable/select_btn">
+    android:background="@drawable/pet_background">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="이름"
-                android:textColor="@color/black"
+                android:textColor="@color/lime"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -43,7 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="품종 / 나이 / 성"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
