--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,23 +3,23 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/nav_home"
         android:title="@string/home" />
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/nav_reserve"
         android:title="@string/reserve_log" />
 
     <item
         android:enabled="true"
         android:id="@+id/navigation_public_info"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/nav_info"
         android:title="정보" />
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/nav_profile"
         android:title="@string/profile" />
 
 </menu>
